# retro-rl-agents

./: .gitignore  README.md  constants.py  main.py  pyproject.toml  train.py
configs/sf2/: eval.yml  testing.yml  train.yml  watch.yml
db/: README.md  build_db.sh  build_testing_cb.sh
db/migrations/: 000_create_training_runs.sql  002_create_eval_results.sql  003_create_imitation_runs.sql
docs/source/: conf.py  index.rst  modules.rst
src/retro_rl_agents/: main.py
src/retro_rl_agents/callbacks/: callback_factory.py  external_cbs.py
src/retro_rl_agents/cli/: arguments.py
src/retro_rl_agents/data_models/: config_data.py
src/retro_rl_agents/domain_models/: agent_data.py  config_data.py  env_data.py  env_model.py  service_data.py
src/retro_rl_agents/env_wrappers/: external_wrappers.py  wrapper_factory.py
src/retro_rl_agents/models/: load.py
src/retro_rl_agents/rl_models/: fusenet.py  load.py  ppo.py
src/retro_rl_agents/services/: call.py  eval.py  imitation.py  train.py  watch.py
src/retro_rl_agents/utils/: constants.py
tensorboards/sf2/PPO_1/: events.out.tfevents.1772297168.oscar-rzr.159213.0  events.out.tfevents.1772353314.oscar-rzr.18352.0
trained_agents/ppo/2026-03-28T22:24:57/2026-03-29T08:50:00/: eval_results.json
trained_agents/ppo/2026-03-28T22:24:57/2026-03-29T09:34:39/: eval_results.json
trained_agents/ppo/2026-04-28T21:20:22/2026-04-28T21:24:17/: eval_results.json
trained_agents/ppo/2026-04-28T21:20:22/2026-04-29T19:11:57/: eval_results.json
trained_agents/ppo/2026-04-28T21:20:22/2026-04-29T20:19:34/: eval_results.json
trained_agents/ppo/2026-04-28T21:20:22/2026-04-29T20:24:04/: eval_results.json
